Stylesheet/emote/tag updates 2013-03-17 (also: added +murky, +princesscadance)

--- a/source-css/anotherponymotessub.css
+++ b/source-css/anotherponymotessub.css
@@ -128,3 +128,63 @@ Width: 400px;
 Height: 222px;
 background-image: url(%%discord10%%) !important
 }
+
+a[href="/unimpressed"] {
+background-position: 0px 0px;
+Display: block;
+Clear: none;
+Float: left;
+Width: 180px;
+Height: 197px;
+background-image: url(%%unimpressed%%) !important
+}
+
+a[href="/discordlicious"] {
+background-position: 0px 0px;
+Display: block;
+Clear: none;
+Float: left;
+Width: 180px;
+Height: 257px;
+background-image: url(%%discordlicious%%) !important
+}
+
+a[href="/hereafter"] {
+background-position: 0px 0px;
+Display: block;
+Clear: none;
+Float: left;
+Width: 200px;
+Height: 332px;
+background-image: url(%%hereafter%%) !important
+}
+
+a[href="/discworried"] {
+background-position: 0px 0px;
+Display: block;
+Clear: none;
+Float: left;
+Width: 150px;
+Height: 278px;
+background-image: url(%%discworried%%) !important
+}
+
+a[href="/ppcar"] {
+background-position: 0px 0px;
+Display: block;
+Clear: none;
+Float: left;
+Width: 240px;
+Height: 156px;
+background-image: url(%%ppcar%%) !important
+}
+
+a[href="/rpschibi"] {
+background-position: 0px 0px;
+Display: block;
+Clear: none;
+Float: left;
+Width: 263px;
+Height: 260px;
+background-image: url(%%rpschibi%%) !important
+}
