--- a/source-css/berrytubelounge.css
+++ b/source-css/berrytubelounge.css
@@ -749,11 +749,11 @@ background-position: -0px -700px
         display: none;
         }  
 .subscribers .number::after {
-        content: " TerryBoobers";
+        content: " Seaponies";
         }
     .users-online .word {
         display: none;
         }  
     .users-online .number::after {
-        content: " TerryBoobers online now";
+        content: " Seaponies online now";
         }
