--- a/source-css/falloutequestria.css
+++ b/source-css/falloutequestria.css
@@ -367,13 +367,13 @@ a[href|="/plotseverywhere"]{ background-position: 0 -1937px; width: 180px; heigh
 a[href|="/psychoshy"]{ background-position: -250px 0; width: 98px; height: 150px;}
 a[href|="/psychoshy"]:hover{background-position: -250px -200px; width: 98px; height: 150px;}
 
-a[href|="/lpmintals"], a[href|="/redeye"], a[href|="/vrcrazy"], a[href|="/mglory"], a[href|="/hiredgun"], a[href|="/bjwindow"], a[href|="/calamityspooky"], a[href|="/murkyinsecure"], a[href|="/bjinabowl"], a[href|="/tapdancingbj"], a[href|="/bjbored"], a[href|="/lpgdi"], a[href|="/bjmanic"], a[href|="/twiseal"]
+a[href|="/lpmintals"], a[href|="/redeye"], a[href|="/vrcrazy"], a[href|="/mglory"], a[href|="/hiredgun"], a[href|="/bjwindow"], a[href|="/calamityspooky"], a[href|="/murkyinsecure"], a[href|="/bjinabowl"], a[href|="/tapdancingbj"], a[href|="/bjbored"], a[href|="/lpgdi"], a[href|="/bjmanic"], a[href|="/twiseal"], a[href|="/murkyfaint"]
 {
 display: block;
 clear: none;
 float: left;
 background-repeat: no-repeat;
-background-image: url(%%foe-em5-v23%%);
+background-image: url(%%foe-em5-v26%%);
 }
 a[href|="/bjbored"]{background-position: 0 0; width: 70px; height: 70px; }
 a[href|="/bjinabowl"]{ background-position: 0 -120px; width: 73px; height: 70px; }
@@ -384,11 +384,12 @@ a[href|="/hiredgun"]{ background-position: 0 -662px; width: 117px; height: 150px
 a[href|="/lpgdi"]{ background-position: 0 -862px; width: 70px; height: 83px; }
 a[href|="/lpmintals"]{background-position: 0 -995px; width: 71px; height: 100px; } 
 a[href|="/mglory"]{ background-position: 0 -1145px; width: 154px; height: 150px; }
-a[href|="/murkyinsecure"]{ background-position: 0 -1345px; width: 81px; height: 100px; }
-a[href|="/redeye"]{background-position: 0 -1495px; width: 65px; height: 100px; }
-a[href|="/tapdancingbj"]{ background-position: 0 -1645px; width: 127px; height: 150px; }
-a[href|="/twiseal"]{ background-position: 0 -1845px; width: 133px; height: 150px; }
-a[href|="/vrcrazy"]{ background-position: -204px 0; width: 70px; height: 70px; } 
+a[href|="/murkyfaint"]{ background-position: 0 -1345px; width: 190px; height: 150px; }
+a[href|="/murkyinsecure"]{ background-position: 0 -1545px; width: 81px; height: 100px; }
+a[href|="/redeye"]{background-position: 0 -1695px; width: 64px; height: 100px; }
+a[href|="/tapdancingbj"]{ background-position: 0 -1845px; width: 127px; height: 150px; }
+a[href|="/twiseal"]{ background-position: -240px 0; width: 133px; height: 150px; }
+a[href|="/vrcrazy"]{ background-position: -240px -200px; width: 70px; height: 70px; } 
 
 
 a[href|="/advicebj"]
