--- a/source-css/ilovedashie.css
+++ b/source-css/ilovedashie.css
@@ -179,7 +179,7 @@ a.author:after {
 
 
 .titlebox .number:after {
-    content: " skittles"
+    content: " M&M's®"
 }
 .titlebox .word:not(:first-child) {
     content: "";
