--- a/source-css/marmemotes.css
+++ b/source-css/marmemotes.css
@@ -144,6 +144,38 @@ a[href|="/rdpdance"]{
     height: 140px;
     background-image: url(%%rdpdance%%)
     }
+a[href|="/welliwashungryandwhenyoucravehands"]{
+    display: block;
+    clear: none;
+    float: left;
+    width: 126px;
+    height: 140px;
+    background-image: url(%%welliwashungryandwhenyoucravehands%%)
+    }
+a[href|="/idontkillpeople"]{
+    display: block;
+    clear: none;
+    float: left;
+    width: 110px;
+    height: 140px;
+    background-image: url(%%idontkillpeople%%)
+    }
+a[href|="/thirtyseventimesinthechest"]{
+    display: block;
+    clear: none;
+    float: left;
+    width: 63px;
+    height: 140px;
+    background-image: url(%%thirtyseventimesinthechest%%)
+    }
+a[href|="/vsspace"]{
+    display: block;
+    clear: none;
+    float: left;
+    width: 135px;
+    height: 140px;
+    background-image: url(%%vsspace%%)
+    }
 /*end animotes*/
 
 /* sheet1 */
@@ -529,7 +561,21 @@ a[href|="/bppassedout"]{
 
 /* sheet5 */
 a[href|="/aphxtwn"], 
-a[href|="/bplio"], 
+a[href|="/bplio"],
+a[href|="/ahamabigpony"],
+a[href|="/gabelincoln"],
+a[href|="/berryssacrifice"],
+a[href|="/dashiegrump"],
+a[href|="/handsomespike"],
+a[href|="/bant"],
+a[href|="/itsnotcreepy"],
+a[href|="/sovietlaying"],
+a[href|="/bpclassy"],
+a[href|="/bpgoddess"],
+a[href|="/bpscrunchie"],
+a[href|="/lyrawat"],
+a[href|="/popetwilight"],
+a[href|="/gabelincolnhats"],
 a[href|="/danvs"], 
 a[href|="/DAAAN"]
  {
@@ -547,6 +593,60 @@ a[href|="/bplio"]{
     width: 119px;
     background-position: -198px -0px;
 }
+
+a[href|="/ahamabigpony"]{
+    width: 150px;
+    background-position: -0px -140px;
+}
+a[href|="/gabelincoln"]{
+    width: 123px;
+    background-position: -150px -140px;
+}
+a[href|="/berryssacrifice"]{
+    width: 119px;
+    background-position: -273px -140px;
+}
+a[href|="/dashiegrump"]{
+    width: 193px;
+    background-position: -0px -280px;
+}
+a[href|="/handsomespike"]{
+    width: 109px;
+    background-position: -193px -280px;
+}
+a[href|="/bant"]{
+    width: 92px;
+    background-position: -302px -280px;
+}
+a[href|="/itsnotcreepy"]{
+    width: 147px;
+    background-position: -0px -420px;
+}
+a[href|="/sovietlaying"]{
+    width: 194px;
+	height: 130px;
+    background-position: -147px -420px;
+}
+a[href|="/bpclassy"]{
+    width: 109px;
+    background-position: -0px -560px;
+}
+a[href|="/bpgoddess"]{
+    width: 116px;
+    background-position: -109px -560px;
+}
+a[href|="/bpscrunchie"]{
+    width: 132px;
+    background-position: -225px -560px;
+}
+a[href|="/lyrawat"]{
+    width: 123px;
+    background-position: -0px -700px;
+}
+a[href|="/popetwilight"]{
+    width: 117px;
+    background-position: -123px -700px;
+}
 a[href|="/danvs"]{
     width: 130px;
     height: 200px;
@@ -556,6 +656,11 @@ a[href|="/DAAAN"]{
     width: 130px;
     height: 200px;
     background-position: -130px -1120px;
+}
+a[href|="/gabelincolnhats"]{
+    width: 112px;
+    height: 200px;
+    background-position: -260px -1120px;
 }
 
 /* end sheet5 */
