--- a/source-css/mylittleandysonic1.css
+++ b/source-css/mylittleandysonic1.css
@@ -944,7 +944,8 @@ a.author[href$=OneOfTheseDaysLuna],
 a.author[href$=ZZW30],
 a.author[href$=Zovistograt],
 a.author[href$=JustAnotherGDB],
-a.author[href$=Lord_Ninka]
+a.author[href$=Lord_Ninka],
+a.author[href$=StabbyTheLlama]
 
 
 { 
@@ -1033,7 +1034,8 @@ a.author[href$=ZZW30]:before,
 a.author[href$=zovistograt]:before,
 a.author[href$=JustAnotherGDB]:before,
 a.author[href$=Swiftskii]:before,
-a.author[href$=Lord_Ninka]:before
+a.author[href$=Lord_Ninka]:before,
+a.author[href$=StabbyTheLlama]:before
 
 {
 font-size:10px!important; 
@@ -1120,6 +1122,7 @@ a.author[href$=ZZW30]:before { content:"CaptChuckles" }
 a.author[href$=JustAnotherGDB]:before { content:"Just Another Face in the Clouds" }
 a.author[href$=Swiftskii]:before { content:"FairyFacedWizardFelcher" }
 a.author[href$=Lord_Ninka]:before { content:"Ninka" }
+a.author[href$=StabbyTheLlama]:before { content:"StabbyTheDinosaur" }
 
 
 /* Replacing puppy's name with a picture of derpy */
