--- a/source-css/mylittlemango.css
+++ b/source-css/mylittlemango.css
@@ -18,7 +18,7 @@ Added emotes (1/15/13)
 
 /* Background*/
 
-body{background:url(%%mlmbackground%%) no-repeat fixed center center!important}
+body{background:url(%%background1%%) no-repeat fixed center center!important}
 .res-nightmode .content{background-color:transparent!important}
 .res-nightmode{background-color:transparent !important}
 .content .md h1{color:#789922;border-bottom:none;padding-bottom:0px}
