--- a/source-css/mlploungesteamgroup.css
+++ b/source-css/mlploungesteamgroup.css
@@ -330,6 +330,7 @@ a.author[href$="srsbsnsman"],
 a.author[href$="Sangfroidish"],
 a.author[href$="ctare"],
 a.author[href$="Draze"],
+a.author[href$="thepostaldud3"],
 a.author[href$="Dundrioundio"],
 a.author[href$="Dwarflord"],
 a.author[href$="KommandantSprakle"],
@@ -347,6 +348,7 @@ a.author[href$="sna_fu_bar"]
 a.author[href$="srsbsnsman"]:before,
 a.author[href$="Sangfroidish"]:before,
 a.author[href$="ctare"]:before,
+a.author[href$="thepostaldud3"]:before,
 a.author[href$="Dundrioundio"]:before,
 a.author[href$="Dwarflord"]:before,
 a.author[href$="Draze"]:before,
@@ -367,6 +369,7 @@ a.author[href$="KommandantSprakle"]:before {content: "PeasantSprakle"}
 a.author[href$="sna_fu_bar"]:before {content: "anus_barf"}
 a.author[href$="Dundrioundio"]:before {content: "Dundrio"}
 a.author[href$="Dwarflord"]:before {content: "Cinor"}
+a.author[href$="thepostaldud3"]:before {content: "steev"}
 
 /*Names for extra text go here*/
 a.author[href$="Sangfroidish"]:after,
